--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ services:
 
 before_install:
   - docker build -t $DOCKER_IMAGE:$TRAVIS_COMMIT .
+  - docker tag mod05-api $DOCKER_IMAGE
   - docker login $DOCKER_REGISTRY -u="$DOCKER_USERNAME" -p=$DOCKER_PASSWORD
   - docker push $DOCKER_IMAGE:$TRAVIS_COMMIT
 
