--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t $DOCKER_IMAGE:$TRAVIS_COMMIT .
-  - docker tag mod05-api rdtregistry.azurecr.io/mod05-api
+  - docker build -t mod05-api:$TRAVIS_COMMIT .
+  - docker tag mod05-api:$TRAVIS_COMMIT rdtregistry.azurecr.io/mod05-api:$TRAVIS_COMMIT
   - docker login $DOCKER_REGISTRY -u="$DOCKER_USERNAME" -p=$DOCKER_PASSWORD
-  - docker push rdtregistry.azurecr.io/mod05-api
+  - docker push rdtregistry.azurecr.io/mod05-api:$TRAVIS_COMMIT
 
 notifications:
   email:
