--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ services:
   - docker
 
 before_install:
-  - docker build -t mod05-api:$TRAVIS_COMMIT .
-  - docker tag mod05-api:$TRAVIS_COMMIT rdtregistry.azurecr.io/mod05-api:$TRAVIS_COMMIT
+  - docker build -t mod05-api:$TRAVIS_BUILD_NUMBER .
+  - docker tag mod05-api:$TRAVIS_BUILD_NUMBER rdtregistry.azurecr.io/mod05-api:$TRAVIS_BUILD_NUMBER
   - docker login $DOCKER_REGISTRY -u="$DOCKER_USERNAME" -p=$DOCKER_PASSWORD
-  - docker push rdtregistry.azurecr.io/mod05-api:$TRAVIS_COMMIT
-  - docker run -d rdtregistry.azurecr.io/mod05-api:$TRAVIS_COMMIT
+  - docker push rdtregistry.azurecr.io/mod05-api:$TRAVIS_BUILD_NUMBER
+  - docker run -d rdtregistry.azurecr.io/mod05-api:$TRAVIS_BUILD_NUMBER
 
   script:
     - docker ps | grep -q mod05-api
